💄 Tailwind CSSを使って既存のスタイルの書き換え

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "javascript.preferences.importModuleSpecifier": "non-relative",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  }
 }
